# rhcsa

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  404.html  CLAUDE.md  COPYRIGHT_NOTICE.md  README.md  anki_rhcsa_flashcards.csv  exam_quick_reference.md  index.html  mkdocs.yml  pdf_event_hook.py  pyproject.toml  requirements.txt  skills_assessment.md  study_plan.md
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: deploy.yml
anki/: rhcsa_deck.csv
docs/: command_reference_by_topic.md  ebook_summary.md  exam_quick_reference.md  index.md  rhcsa_acronyms_glossary.md
docs/rhcsa_synthesis/: 00_exam_overview.md  01_system_installation.md  02_file_management.md  03_user_group_management.md  04_file_permissions.md  05_process_service_management.md  06_package_management.md  07_storage_lvm.md  08_networking.md  09_selinux.md  10_firewall.md  11_boot_grub.md  12_logging_monitoring.md  13_scheduled_tasks.md  14_container_management.md  14_flatpak_management.md  15_troubleshooting.md  _template.md  index.md
lab_scenarios/: 01_user_management.md  02_storage_management.md  03_selinux_security.md  04_exam_simulation.md
reference/: command_reference_by_topic.md  ebook_summary.md  exam_quick_reference.md  rhcsa_acronyms_glossary.md
reference/rhcsa_synthesis/: 00_exam_overview.md  02_file_management.md  03_user_group_management.md  04_file_permissions.md  05_process_service_management.md  06_package_management.md  08_networking.md  (+4 more)
templates/: styles.scss
vagrant/: .rhel-credentials.template  Vagrantfile  lab-up.sh
(+27 files in other folders)
