[project]
name = "rhcsa-docs"
version = "0.1.0"
description = "RHCSA certification study guide documentation"
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-awesome-pages-plugin>=2.8.0",
    "mkdocs-redirects>=1.2.0",
    "mkdocs-to-pdf",
]
